# cru-scrape

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.build.yml  docker-compose.yml  pyproject.toml  requirements.txt  schema.sql  test.py
db/: init-pgadmin.sh  permissions.sql  schema.sql
scripts/: modified.tsv  original.tsv  upload-organizations.py
src/: entities.py  get_yearly_snapshot.py  ignore_list.py  item.py  logger.py  main.py  pipeline.py  spider.py  upload.py  waybackurl.py  www-maine-gov-ifw-.txt
src/commands/: crawl.py  enqueue.py  list_combos.py  organizations.tsv  scrape_one_url.py  seed_organizations.py  worker.py
src/scripts/: crawl_url.py  organizations.tsv  upload-organizations.py  upload_organizations.py
src/utils/: env_var.py  psql.py  redis.py  url.py
